20140226两地版本合并
1.拖拽句柄样式修改
2.下拉框增加联想功能
3.SPC控件预览翻页数据删除错误问题解决
4.部分控件字体样式设置
5.单值图没有数据时出图时间、数据点数、等统计信息纠正

--- a/code/CSS/NewDataPage.css
+++ b/code/CSS/NewDataPage.css
@@ -44,7 +44,9 @@
     
 .textSty
 {
-    width:200px;
+    /*width:200px;*/
+    /*20140224将width设置为280*/
+    width:280px;
     --height:20px;
     margin-left:20px;
     border:1px solid #d3d5db;  
@@ -61,7 +63,9 @@
 .textareaSty
 {
      border:1px solid #d3d5db;  
-     width:200px;
+     /*width:200px;*/
+     /*20140224将width设置为280*/
+     width:280px;
     height:40px;
     border-radius:5px; 
     margin-left:20px;
