--- a/code/assets/css/bootstrap.css
+++ b/code/assets/css/bootstrap.css
@@ -1278,7 +1278,7 @@ textarea[disabled],
 input[readonly],
 select[readonly],
 textarea[readonly] {
-  cursor: not-allowed;
+  /*cursor: not-allowed;*/
   background-color: #eeeeee;
 }
 
