20140311结束版本合并提交
1.SPC图放大正常
2.数据钻取与控件传参同时支持
3.单值图统计信息面板编辑项备注与图形名称默认为空，且可编辑支持
4.URL参数面板在小分辨率下布局问题解决

--- a/code/JS/Controls/ControlBasic.css
+++ b/code/JS/Controls/ControlBasic.css
@@ -416,4 +416,15 @@ text-align:center;
     padding-left: 10px;
     width:74px;
 }
+.CustomCtrlExtParsMinCell{
+    text-align: left;
+    padding-left: 10px;
+    width:74px;
+    text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
+    -webkit-text-overflow: ellipsis;
+    -moz-text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
 /*SCP 控件钻取，属性面板样式信息 end*/
