--- a/spcView/customizePanel.css
+++ b/spcView/customizePanel.css
@@ -165,6 +165,7 @@ a.closeBtn:hover{color:#fff;}
 }
 .MenuDiv{
     width: 170px;
+    left:-170px;
     height: 70px;
     line-height: 40px;
     text-align: left;
