--- a/spcView/js/Controls/EdgeData/EdgeData1_0.css
+++ b/spcView/js/Controls/EdgeData/EdgeData1_0.css
@@ -25,3 +25,22 @@
 .edgedata_right_btn{
 	background:url('img/right.png') no-repeat;
 }
+.EdgeDataXaxisTitleDiv{
+	position:absolute;
+	right:5%;
+	bottom:50%;
+	width:18em;
+	height:20px;
+	text-align:right;
+}
+.unselectable {
+   -moz-user-select: none;
+   -khtml-user-select: none;
+   -webkit-user-select: none;
+   /*
+     Introduced in IE 10.
+     See http://ie.microsoft.com/testdrive/HTML5/msUserSelect/
+   */
+   -ms-user-select: none;
+   user-select: none;
+}
